IaC/2.Terraform/K8s/lessons/145/java-app/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: java-app
  namespace: staging
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: java-app
