IaC/2.Terraform/K8s/lessons/145/java-app/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-java
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: internal-ingress-nginx
  rules:
    - host: java.antonputra.pvt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-app
                port:
                  number: 8080
